# geistscope

./: .gitignore  CLAUDE.md  CYBERPUNK_WISHLIST.md  HANDOFF.md  README.md
.github/workflows/: ci.yml
crates/: README.md
crates/ai-prioritize/src/: main.rs
crates/corpus-builder/src/: wayback.rs
crates/engagement/src/: cli.rs  lib.rs  main.rs  traffic.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/src/: lib.rs  wordlists.rs
crates/http-client/: Cargo.toml
crates/llm-client/src/: anthropic.rs  lib.rs
crates/mg-aifuzz/src/: rubric.rs
crates/mg-crawl/src/: extract.rs  main.rs
crates/mg-exploitgen/: Cargo.toml
crates/mg-exploitgen/templates/: Cargo.toml.tpl
crates/mg-exploitgen/templates/src/: cleanup.rs.tpl  main.rs.tpl
crates/mg-exploitgen/templates/tests/: smoke.rs.tpl
crates/mg-fuzz/src/: attack.rs  diff.rs  main.rs  report.rs  template.rs
crates/mg-probe/: Cargo.toml
crates/mg-probe/src/: checks.rs
crates/mg-recon/src/: main.rs
crates/mg-recopilot/: Cargo.toml
crates/mg-recopilot/src/: lib.rs  main.rs
crates/mg-replay/src/: replay.rs
crates/mg-report/: Cargo.toml
crates/mg-report/src/: main.rs  prompt.rs
crates/mg-scan/src/: cli.rs  lib.rs  output.rs  services.rs
crates/mg-tui/: Cargo.toml
crates/mg-tui/src/: loader.rs  ui.rs
crates/security-graph/schema/: postgres.sql
crates/session/src/: lib.rs
crates/subdomain-enum/src/: cli.rs
docs/: AI_TOOL_ENDPOINTS.md  BUG_HUNTING_METHODOLOGY.md  FEATURE_ROADMAP.md  GEISTSCOPE_SKILLS.md  PRODUCT_DOCTRINE.md  RESEARCH_SOURCES.md  STRATEGIC_HANDOFF.md
docs/skills/bug-hunting/api-schema-bola/: SKILL.md
docs/skills/bug-hunting/oob-blind-callbacks/: SKILL.md
docs/skills/bug-hunting/web-cache-and-edge-flaws/: SKILL.md
docs/skills/geistscope-builder/attack-surface-recon-workflow/: SKILL.md
docs/skills/geistscope-builder/consulting-evidence-ops/: SKILL.md
docs/skills/geistscope-builder/geistscope-ai-harness/: SKILL.md
docs/skills/geistscope-builder/geistscope-tui-browser/: SKILL.md
engine-rust/: Cargo.toml  README.md  ULTRAPLAN.md
engine-rust/ai-prioritize/: Cargo.toml
engine-rust/ai-prioritize/src/: main.rs  parse.rs  prompt.rs  skills.rs
engine-rust/corpus-builder/: Cargo.toml
engine-rust/corpus-builder/src/: cli.rs  ct.rs  lib.rs  main.rs  store.rs  wayback.rs
engine-rust/engagement/: Cargo.toml
engine-rust/engagement/src/: cli.rs  engagement.rs  finding.rs  lib.rs  main.rs  scope.rs
engine-rust/fingerprint/: Cargo.toml
engine-rust/fingerprint/src/: cli.rs  detect.rs  main.rs  wordlists.rs
engine-rust/http-client/: Cargo.toml
engine-rust/http-client/src/: lib.rs
engine-rust/llm-client/: Cargo.toml
engine-rust/llm-client/src/: anthropic.rs  lib.rs  ollama.rs
engine-rust/mg-aifuzz/: Cargo.toml
engine-rust/mg-aifuzz/src/: lib.rs  main.rs  template.rs
engine-rust/mg-crawl/: Cargo.toml
engine-rust/mg-crawl/src/: analyze.rs  crawl.rs  js_analyzer.rs  main.rs
engine-rust/mg-exploitgen/src/: lib.rs  main.rs  prompt.rs
engine-rust/mg-exploitgen/templates/: runbook.md.tpl
engine-rust/mg-exploitgen/templates/src/: payload.rs.tpl  scanner.rs.tpl  validator.rs.tpl
engine-rust/mg-fuzz/: Cargo.toml
engine-rust/mg-fuzz/src/: main.rs  payload.rs  report.rs
engine-rust/mg-harness/: Cargo.toml
engine-rust/mg-harness/src/: lib.rs  main.rs
engine-rust/mg-probe/: Cargo.toml
engine-rust/mg-probe/src/: checks.rs  main.rs  report.rs
engine-rust/mg-recon/: Cargo.toml
engine-rust/mg-recon/src/: lib.rs  main.rs  orchestrator.rs
engine-rust/mg-recopilot/src/: prompt.rs
engine-rust/mg-replay/: Cargo.toml
engine-rust/mg-replay/src/: main.rs  parse.rs  replay.rs
engine-rust/mg-report/: Cargo.toml
engine-rust/mg-report/src/: cvss.rs  disclosure.rs  lib.rs  main.rs
engine-rust/mg-scan/: Cargo.toml
engine-rust/mg-scan/src/: cli.rs  lib.rs  main.rs  scanner.rs
engine-rust/mg-tui/: Cargo.toml
engine-rust/mg-tui/src/: app.rs  browser_fetch.rs  halfblock.rs  html_render.rs  loader.rs  main.rs  ui.rs
engine-rust/mg-tui/src/views/: browser.rs  engagements.rs  findings.rs  fuzz.rs  harness.rs  hosts.rs  logs.rs  mod.rs  requests.rs
engine-rust/payload-engine/: Cargo.toml
engine-rust/payload-engine/src/: lib.rs
engine-rust/security-graph/: Cargo.toml
engine-rust/security-graph/src/: lib.rs
engine-rust/session/: Cargo.toml
engine-rust/session/src/: lib.rs
engine-rust/subdomain-enum/: Cargo.toml
engine-rust/subdomain-enum/src/: brute.rs  cli.rs  ct_logs.rs  lib.rs  main.rs  output.rs
engine-rust/subdomain-enum/src/wordlists/: common.txt
tests/integration/: pipeline-smoke.sh
