[workspace]
members = [
    "mg-scan",
    "subdomain-enum",
    "http-client",
    "llm-client",
    "fingerprint",
    "corpus-builder",
    "engagement",
    "mg-recon",
    "ai-prioritize",
    "mg-crawl",
    "mg-probe",
    "mg-fuzz",
    "mg-replay",
    "mg-tui",
    "mg-harness",
    "mg-report",
    "session",
    "payload-engine",
    "mg-recopilot",
    "mg-aifuzz",
    "mg-exploitgen",
]
resolver = "2"
