[package]
name = "http-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "http_client"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
fastrand = "2"
