[package]
name = "mg-probe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-probe"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
session = { path = "../session" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
url = "2"

[dev-dependencies]
tempfile = "3"
