[package]
name = "mg-report"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-report"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
llm-client = { path = "../llm-client" }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
