[package]
name = "ai-prioritize"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ai-prioritize"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
llm-client = { path = "../llm-client" }
fingerprint = { path = "../fingerprint" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
