[package]
name = "corpus-builder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "corpus-builder"
path = "src/main.rs"

[lib]
name = "corpus_builder"
path = "src/lib.rs"

[dependencies]
http-client = { path = "../http-client" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }
url = "2"
urlencoding = "2"
