[package]
name = "engagement"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-engagement"
path = "src/main.rs"

[lib]
name = "engagement"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }
