[package]
name = "fingerprint"
version = "0.1.0"
edition = "2024"

[lib]
name = "fingerprint"
path = "src/lib.rs"

[dependencies]
http-client = { path = "../http-client" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
