[package]
name = "mg-aifuzz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-aifuzz"
path = "src/main.rs"

[lib]
name = "mg_aifuzz"
path = "src/lib.rs"

[dependencies]
engagement = { path = "../engagement" }
payload-engine = { path = "../payload-engine" }
session = { path = "../session" }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
