[package]
name = "mg-crawl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-crawl"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
http-client = { path = "../http-client" }
session = { path = "../session" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
scraper = "0.19"
regex = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
