[package]
name = "mg-harness"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-harness"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
mg-recon = { path = "../mg-recon" }
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting", "macros"] }
url = "2"
