[package]
name = "mg-recon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-recon"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
subdomain-enum = { path = "../subdomain-enum" }
fingerprint = { path = "../fingerprint" }
mg-scan = { path = "../mg-scan" }
http-client = { path = "../http-client" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
