[package]
name = "mg-scan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-scan"
path = "src/main.rs"

[lib]
name = "mg_scan"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }
ipnet = "2.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
engagement = { path = "../engagement" }
