[package]
name = "mg-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mg-tui"
path = "src/main.rs"

[dependencies]
engagement = { path = "../engagement" }
mg-harness = { path = "../mg-harness" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
scraper = "0.19"
ego-tree = "0.6"
reqwest = { version = "0.12", features = ["blocking"] }
url = "2"
image = { version = "0.25", default-features = true }
