[package]
name = "session"
version = "0.1.0"
edition = "2024"

[lib]
name = "session"
path = "src/lib.rs"

[dependencies]
engagement = { path = "../engagement" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
