[package]
name = "subdomain-enum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "subdomain-enum"
path = "src/main.rs"

[lib]
name = "subdomain_enum"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }
